--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.2.2",
+    "@prisma/client": "^2.19.0",
+    "@tailwindcss/typography": "^0.4.0",
     "next": "10.0.9",
+    "next-auth": "^3.13.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "prisma": "2.19.0",
+    "tailwindcss": "^2.0.4",
+    "typescript": "^4.2.3"
   }
 }
