implement csv upload, husky lint staged etc

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,13 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://user:pass@post.gres:25060/defaultdb?sslmode=require"
+DATABASE_URL="postgresql://user:pass@post.gres.com:25060/defaultdb?sslmode=require"
+
+AWS_ENDPOINT=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_KEY=
+BUCKET_BASEURL=
+BUCKET_NAME=
 
 # GitHub OAuth
 GITHUB_ID=
