--- a/package.json
+++ b/package.json
@@ -5,23 +5,44 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*": "prettier --write"
   },
   "dependencies": {
     "@fontsource/poppins": "^4.2.2",
     "@prisma/client": "^2.19.0",
     "@tailwindcss/typography": "^0.4.0",
+    "aws-sdk": "^2.881.0",
+    "axios": "^0.21.1",
+    "csvtojson": "^2.0.10",
+    "formidable": "^1.2.2",
+    "husky": "^6.0.0",
     "next": "10.0.9",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-transition-group": "^4.4.1"
+    "react-table": "^7.6.3",
+    "react-transition-group": "^4.4.1",
+    "superjson": "^1.7.3"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
+    "babel-plugin-superjson-next": "^0.2.3",
+    "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
+    "prettier": "^2.2.1",
     "prisma": "2.19.0",
     "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3"
