--- a/package.json
+++ b/package.json
@@ -7,15 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "prettier --check .",
-    "format": "prettier --write ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "*": "prettier --write"
+    "*.{ts,tsx,js,jsx,prisma,css,md}": "prettier --write"
   },
   "dependencies": {
     "@fontsource/poppins": "^4.2.2",
@@ -25,7 +21,7 @@
     "axios": "^0.21.1",
     "csvtojson": "^2.0.10",
     "formidable": "^1.2.2",
-    "husky": "^6.0.0",
+    "husky": ">=6",
     "next": "10.0.9",
     "next-auth": "^3.13.3",
     "react": "17.0.2",
@@ -43,6 +39,7 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
+    "prettier-plugin-prisma": "^0.7.0",
     "prisma": "2.19.0",
     "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3"
