--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "csvtojson": "^2.0.10",
     "formidable": "^1.2.2",
     "husky": ">=6",
+    "maplibre-gl": "^1.14.0",
     "next": "10.1.3",
     "next-auth": "^3.14.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-map-gl": "^6.1.12",
     "react-table": "^7.6.3",
     "react-transition-group": "^4.4.1",
     "superjson": "^1.7.3"
