--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^3.14.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-flow-renderer": "^9.5.0",
     "react-map-gl": "^6.1.12",
     "react-table": "^7.6.3",
     "react-transition-group": "^4.4.1",
