--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^0.3.2",
     "@prisma/client": "^2.20.1",
     "@tailwindcss/typography": "^0.4.0",
+    "apexcharts": "^3.26.1",
     "aws-sdk": "^2.884.0",
     "axios": "^0.21.1",
     "csvtojson": "^2.0.10",
@@ -27,6 +28,7 @@
     "next": "10.1.3",
     "next-auth": "^3.14.6",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^9.5.0",
     "react-map-gl": "^6.1.12",
