--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^9.5.0",
+    "react-hook-form": "^7.3.6",
     "react-map-gl": "^6.1.12",
     "react-table": "^7.6.3",
     "react-transition-group": "^4.4.1",
@@ -40,6 +41,7 @@
     "@types/next-auth": "^3.13.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@types/react-table": "^7.7.0",
     "autoprefixer": "^10.2.5",
     "babel-plugin-superjson-next": "^0.2.3",
     "lint-staged": "^10.5.4",
