--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "format": "prettier --write .",
     "prepare": "husky install"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,prisma,css,md}": "prettier --write"
   },
