--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.8.3",
     "react-map-gl": "^6.1.16",
     "react-table": "^7.7.0",
+    "react-toastify": "^7.0.4",
     "react-transition-group": "^4.4.2",
     "superjson": "^1.7.4"
   },
