--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "*.{ts,tsx,js,jsx,prisma,css,md}": "prettier --write"
   },
   "dependencies": {
-    "@fontsource/poppins": "^4.4.5",
+    "@fontsource/nunito": "^4.4.5",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@prisma/client": "^2.24.1",
