--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-table": "^7.7.0",
     "react-toastify": "^7.0.4",
     "react-transition-group": "^4.4.2",
+    "react-use": "^17.2.4",
     "superjson": "^1.7.4"
   },
   "devDependencies": {
