--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@types/react-table": "^7.7.1",
     "autoprefixer": "^10.2.6",
     "babel-plugin-superjson-next": "^0.3.0",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
     "lint-staged": "^11.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.1",
