--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "maplibre-gl": "^1.15.2",
     "next": "11.0.1",
     "next-auth": "^3.27.3",
+    "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
