update example env and dockerfile

--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,9 @@
 
 DATABASE_URL="postgresql://user:pass@post.gres.com:25060/defaultdb?sslmode=require"
 
-AWS_ENDPOINT=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_KEY=
-BUCKET_BASEURL=
-BUCKET_NAME=
-
-# GitHub OAuth
-GITHUB_ID=
-GITHUB_SECRET=
-NEXTAUTH_URL=http://localhost:3000/api/auth
 SECRET=IamAVeryLongAndSuperComplexSecretNobodyWillEverFindOut
+
+# FusionAuth
+FUSIONAUTH_DOMAIN=
+FUSIONAUTH_CLIENT_ID=
+FUSIONAUTH_SECRET=
