--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,91 @@
 version: '3'
 
 services:
+  # Next.js app
+
+  app:
+    build:
+      context: .
+    ports:
+      - 3000:3000
+    depends_on:
+      - fusionauth
+      - postgres
+    networks:
+      - app
+      - auth
+
   postgres:
     image: postgres:13.1
     healthcheck:
-      test: ['CMD', 'pg_isready', '-q', '-d', 'postgres', '-U', 'root']
+      test:
+        ['CMD', 'pg_isready', '-q', '-d', 'postgres', '-U', '${POSTGRES_USER}']
       timeout: 45s
       interval: 10s
       retries: 10
     restart: always
     environment:
-      - POSTGRES_USER=kds_user
-      - POSTGRES_PASSWORD=kds_passwd
-      - POSTGRES_DB=klimadatenschule
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - kds_db_data:/var/lib/postgresql/data
+    networks:
+      - app
+
+  # Fusionauth
+
+  auth_db:
+    image: postgres:11.9-alpine
+    environment:
+      PGDATA: /var/lib/postgresql/data/pgdata
+      POSTGRES_USER: ${FA_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${FA_POSTGRES_PASSWORD}
+    networks:
+      - auth
+    restart: unless-stopped
+    volumes:
+      - fa_db_data:/var/lib/postgresql/data
+
+  fusionauth:
+    image: fusionauth/fusionauth-app:1.30.1
+    depends_on:
+      - auth_db
+    environment:
+      DATABASE_URL: jdbc:postgresql://auth_db:5432/fusionauth
+      # Prior to version 1.19.0, use this deprecated name
+      # DATABASE_ROOT_USER: ${POSTGRES_USER}
+      DATABASE_ROOT_USERNAME: ${FA_POSTGRES_USER}
+      DATABASE_ROOT_PASSWORD: ${FA_POSTGRES_PASSWORD}
+      # Prior to version 1.19.0, use this deprecated name
+      # DATABASE_USER: ${DATABASE_USER}
+      DATABASE_USERNAME: ${FA_DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${FA_DATABASE_PASSWORD}
+      # Prior to version 1.19.0, use this deprecated names
+      # FUSIONAUTH_MEMORY: ${FUSIONAUTH_MEMORY}
+      # FUSIONAUTH_SEARCH_ENGINE_TYPE: database
+      # FUSIONAUTH_URL: http://fusionauth:9011
+      # FUSIONAUTH_RUNTIME_MODE: development
+      FUSIONAUTH_APP_MEMORY: ${FA_FUSIONAUTH_APP_MEMORY}
+      FUSIONAUTH_APP_RUNTIME_MODE: development
+      FUSIONAUTH_APP_URL: http://fusionauth:9011
+      SEARCH_TYPE: database
+
+    networks:
+      - auth
+    restart: unless-stopped
     ports:
-      - 5432:5432
+      - 9011:9011
+    volumes:
+      - fa_config:/usr/local/fusionauth/config
+
+networks:
+  app:
+    driver: bridge
+  auth:
+    driver: bridge
+
+volumes:
+  fa_db_data:
+  kds_db_data:
+  fa_config:
