--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/nunito": "^4.5.0",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@palmabit/react-cookie-law": "^0.6.2",
     "@prisma/client": "^2.27.0",
     "@tailwindcss/typography": "^0.4.1",
     "@webeetle/windy": "^0.8.5",
