add nextauth url to env example

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ DATABASE_URL="postgresql://user:pass@post.gres.com:25060/defaultdb?sslmode=requi
 
 SECRET=IamAVeryLongAndSuperComplexSecretNobodyWillEverFindOut
 
+NEXTAUTH_URL=fullUrlTheAppIsRunningOn
+
 # FusionAuth
 FUSIONAUTH_DOMAIN=
 FUSIONAUTH_CLIENT_ID=
