--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-toastify": "^7.0.4",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.2.4",
-    "superjson": "^1.7.4"
+    "superjson": "^1.7.4",
+    "xlsx": "^0.17.3"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
