--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/nunito": "^4.5.0",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@hookform/resolvers": "^2.8.8",
     "@palmabit/react-cookie-law": "^0.6.2",
     "@prisma/client": "^2.27.0",
     "@tailwindcss/typography": "^0.4.1",
@@ -48,7 +49,8 @@
     "react-transition-group": "^4.4.2",
     "react-use": "^17.2.4",
     "superjson": "^1.7.4",
-    "xlsx": "^0.17.3"
+    "xlsx": "^0.17.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
